--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <header class="header">Trybewarts </header>
-</body>
+  </head>
+  <body>
+    <header class="header">
+      Trybewarts
+      <img
+        src="images/trybewarts-header-logo.svg"
+        alt="trybewarts-header-logo"
+        class="trybewarts-header-logo"
+      />
+    </header>
+  </body>
 </html>
