--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         alt="trybewarts-header-logo"
         class="trybewarts-header-logo"
       />
+      <form class="trybewarts-login">
+        <input type="email" name="email" id="email" placeholder="Email" method= "GET">
+        <input type="password" name="password" id="password" placeholder="Senha" method= "GET">
+        <button id="btn-login" type="submit">Entrar</button>
+      </form>
     </header>
+   <script src="script.js"></script>
   </body>
 </html>
