--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Trybewarts</title>
   </head>
   <body>
     <header class="header">
-      Trybewarts
       <img
         src="images/trybewarts-header-logo.svg"
         alt="trybewarts-header-logo"
         class="trybewarts-header-logo"
       />
-      <form class="trybewarts-login">
-        <input type="email" name="email" id="email" placeholder="Email" method= "GET">
-        <input type="password" name="password" id="password" placeholder="Senha" method= "GET">
-        <button id="btn-login" type="submit">Entrar</button>
-      </form>
+      <h1 id="trybewarts-header-title">Trybewarts</h1>
+      <di
+        ><form class="trybewarts-login">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+            method="GET"
+          />
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Senha"
+            method="GET"
+          />
+          <button id="btn-login" type="submit">Entrar</button>
+        </form>
+      </di>
     </header>
-   <script src="script.js"></script>
+    <main>
+      <form id="evaluation-form"></form>
+    </main>
+    <script src="script.js"></script>
   </body>
 </html>
