--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </header>
     <main>
       <form id="evaluation-form"></form>
+      <img src="images/trybewarts-colored.svg" alt="trybewarts-colored-logo" id="trybewarts-forms-logo">
     </main>
     <script src="script.js"></script>
   </body>
