--- a/index.html
+++ b/index.html
@@ -36,8 +36,38 @@
       </di>
     </header>
     <main>
-      <form id="evaluation-form"></form>
-      <img src="images/trybewarts-colored.svg" alt="trybewarts-colored-logo" id="trybewarts-forms-logo">
+      <form id="evaluation-form">
+        <input
+          type="text"
+          name="primeiro-Nome"
+          id="input-name"
+          placeholder="Nome"
+        />
+        <input
+          type="text"
+          name="segundo-Nome"
+          id="input-lastname"
+          placeholder="Sobrenome"
+        />
+        <input
+          type="email"
+          name="input-email"
+          id="input-email"
+          placeholder="Email"
+        />
+        <select name="House" id="house">
+          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+          <option value="Corvinode" id="corvinode-house">Corvinode</option>
+          <option value="Pytherina" id="pytherina-house">Pytherina</option>
+        </select>
+      </form>
+
+      <img
+        src="images/trybewarts-colored.svg"
+        alt="trybewarts-colored-logo"
+        id="trybewarts-forms-logo"
+      />
     </main>
     <script src="script.js"></script>
   </body>
