--- a/index.html
+++ b/index.html
@@ -37,32 +37,39 @@
     </header>
     <main>
       <form id="evaluation-form">
-        <input
-          type="text"
-          name="primeiro-Nome"
-          id="input-name"
-          placeholder="Nome"
-        />
-        <input
-          type="text"
-          name="segundo-Nome"
-          id="input-lastname"
-          placeholder="Sobrenome"
-        />
-        <input
-          type="email"
-          name="input-email"
-          id="input-email"
-          placeholder="Email"
-        />
-        <select name="House" id="house">
-          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-          <option value="Corvinode" id="corvinode-house">Corvinode</option>
-          <option value="Pytherina" id="pytherina-house">Pytherina</option>
-        </select>
+        <div class="container">
+          <div id="container-name">
+            <input
+              type="text"
+              name="primeiro-Nome"
+              id="input-name"
+              placeholder="Nome"
+            />
+          </div>
+          <div id="container-lastname">
+            <input
+              type="text"
+              name="segundo-Nome"
+              id="input-lastname"
+              placeholder="Sobrenome"
+            />
+          </div>
+          <div id="container-email">
+            <input
+              type="email"
+              name="input-email"
+              id="input-email"
+              placeholder="Email"
+            />
+          </div>
+          <select name="House" id="house">
+            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+            <option value="Corvinode" id="corvinode-house">Corvinode</option>
+            <option value="Pytherina" id="pytherina-house">Pytherina</option>
+          </select>
+        </div>
       </form>
-
       <img
         src="images/trybewarts-colored.svg"
         alt="trybewarts-colored-logo"
