--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             <option value="Pytherina" id="pytherina-house">Pytherina</option>
           </select>
         </div>
+        <section>
+          <label for="family" id="label-family">Qual sua família?</label>
+          <input type="radio" name="family" id="frontend" value="Frontend" />
+          <input type="radio" name="family" id="backend" value="Backend" />
+          <input type="radio" name="family" id="fullstack" value="FullStack" />
+        </section>
       </form>
       <img
         src="images/trybewarts-colored.svg"
