--- a/index.html
+++ b/index.html
@@ -70,10 +70,20 @@
           </select>
         </div>
         <section>
-          <label for="family" id="label-family">Qual sua família?</label>
-          <input type="radio" name="family" id="frontend" value="Frontend" />
-          <input type="radio" name="family" id="backend" value="Backend" />
-          <input type="radio" name="family" id="fullstack" value="FullStack" />
+          <div>
+            <label for="family" id="label-family">Qual sua família?</label>
+            <input type="radio" name="family" id="frontend" value="Frontend"/>
+            <input type="radio" name="family" id="backend" value="Backend"/>
+            <input type="radio" name="family" id="fullstack" value="FullStack"/>
+          </div>
+            <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+            <input type="checkbox" name="HoFs" id="HoFs" value="HoFs"/>HoFs
+            <input type="checkbox" name="Jest" id="Jest" value="Jest"/>Jest
+            <input type="checkbox" name="Promises" id="Promises" value="Promises"/>Promises
+            <input type="checkbox" name="React" id="React" value="React"/>React
+            <input type="checkbox" name="SQL" id="SQL" value="SQL"/>SQL
+            <input type="checkbox" name="Python" id="Python" value="Python"/>Python
+          </div>
         </section>
       </form>
       <img
