--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
             <input type="checkbox" name="Python" id="Python" value="Python"/>Python
           </div>
         </section>
+      <section>
+        <div>
+          <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
+          <input type="radio" name="rate" id="" value="1">
+          <input type="radio" name="rate" id="" value="2">
+          <input type="radio" name="rate" id="" value="3">
+          <input type="radio" name="rate" id="" value="4">
+          <input type="radio" name="rate" id="" value="5">
+          <input type="radio" name="rate" id="" value="6">
+          <input type="radio" name="rate" id="" value="7">
+          <input type="radio" name="rate" id="" value="8">
+          <input type="radio" name="rate" id="" value="9">
+          <input type="radio" name="rate" id="" value="10">
+        </div>
+      </section>
       </form>
       <img
         src="images/trybewarts-colored.svg"
