--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
           <input type="radio" name="rate" id="" value="9">
           <input type="radio" name="rate" id="" value="10">
         </div>
+        <div>
+          <label for="" class="textarea">Deixe seu comentário:</label>
+          <textarea name="comentario" id="comentario" cols="30" rows="10" maxlength="500"></textarea>
+        </div>
       </section>
       </form>
       <img
