--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
           <label for="" class="textarea">Deixe seu comentário:</label>
           <textarea name="comentario" id="comentario" cols="30" rows="10" maxlength="500"></textarea>
         </div>
+        <div>
+          <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <input type="checkbox" name="checkbox" id="agreement">
+        </div>
       </section>
+      
       </form>
       <img
         src="images/trybewarts-colored.svg"
