--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="checkbox" id="agreement">
         </div>
+        <button type="submit" id="submit-btn" disabled>Enviar</button>
       </section>
       
       </form>
@@ -116,6 +117,7 @@
         id="trybewarts-forms-logo"
       />
     </main>
+    <footer>Direitos reservados à Trybewarts©</footer>
     <script src="script.js"></script>
   </body>
 </html>
