--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <link rel="stylesheet" href="style.css" />
@@ -91,6 +91,7 @@
         <div>
           <label class="textarea">Deixe seu comentário:</label>
           <textarea name="comentario" id="comentario" cols="80" rows="5" maxlength="500"></textarea>
+          <div  id="counter">500</div>
         </div>
         <div>
           <label id="label-infos"><input type="checkbox" name="checkbox" id="agreement" />Você
