--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <br />
         <div>
           <label class="textarea">Deixe seu comentário:</label>
-          <textarea name="comentario" id="comentario" cols="80" rows="5" maxlength="500"></textarea>
+          <textarea name="comentario" id="textarea" cols="80" rows="5" maxlength="500"></textarea>
           <div  id="counter">500</div>
         </div>
         <div>
