Tentativa do requisito 21

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <h1 id="trybewarts-header-title">Trybewarts</h1>
     <div>
       <form class="trybewarts-login">
-        <input type="email" name="email" class="input-round" id="email" placeholder="Email" method="GET" />
-        <input type="password" name="password" id="password" placeholder="Senha" method="GET" />
+        <input type="email" name="email" class="input-round" id="email" placeholder="Email"/>
+        <input type="password" name="password" id="password" placeholder="Senha"/>
         <button id="btn-login" type="submit">Entrar</button>
       </form>
     </div>
@@ -29,16 +29,16 @@
       <h2>Formulário de Avaliação</h2>
       <div class="container">
         <div id="container-name">
-          <input type="text" name="primeiro-Nome" id="input-name" placeholder="Nome" />
+          <input type="text" name="Nome" id="input-name" placeholder="Nome" />
         </div>
         <div id="container-lastname">
-          <input type="text" name="segundo-Nome" id="input-lastname" placeholder="Sobrenome" />
+          <input type="text" name="Sobrenome" id="input-lastname" placeholder="Sobrenome" />
         </div>
         <div id="container-email">
-          <input type="email" name="input-email" id="input-email" placeholder="Email" />
+          <input type="email" name="Email" id="input-email" placeholder="Email" />
         </div>
         <label for="house" id="house-label">Casa:
-          <select name="House" id="house">
+          <select name="Casa" id="house">
             <option value="Gitnória" id="gitnoria-house">Gitnória</option>
             <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
             <option value="Corvinode" id="corvinode-house">Corvinode</option>
